<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceControlActivity">

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="429dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="16dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="92dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_device_address"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nessuno"
                    android:textAlignment="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_state2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_state"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="disconnesso"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_data2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_data"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nessuno"
                    android:textAlignment="center" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_rx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rx" />

        <Button
            android:id="@+id/btn_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_tx" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>